tests/ui/lexer/unterminated-comment.stderr
error[E0758]: unterminated block comment
  --> $DIR/unterminated-comment.rs:1:1
   |
LL | /*
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0758`.
